# Berkely-AI-Hackathon

./: README.md
calhacks-main/backend/: config.py  data.py  database.py  emotion.py  main.py  prompt.py  prompt_builder.py  pyproject.toml  session.py  tools.py
calhacks-main/backend/tests/: test_speech_to_text.py  test_views.py
calhacks-main/backend/utils/: message_utils.py  note_utils.py  types.py
calhacks-main/frontend/: package.json
calhacks-main/frontend/src/: App.css  App.tsx  Login.tsx  Signup.tsx  index.tsx  login.css  style.css
calhacks-main/frontend/src/component/: AudioRecorder.tsx  Chat.tsx  ChatNew.tsx  Dash.tsx  DashBoard.tsx  Journal.tsx  Layout.tsx  NavigationBar.tsx  TextBar.tsx  card.tsx  habit-intro.tsx  habit-tracking.css  habit-tracking.tsx  journal_style.css  ring.tsx
calhacks-main/frontend/src/component/chat/: Bubble.tsx  Content.tsx  Header.tsx  MicrophoneButton.tsx
calhacks-main/frontend/src/context/: LoginContext.ts
