[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Shreyas Sreenivas <46835608+shreyas44@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
hume = {extras = ["stream"], version = "^0.3.3"}
openai = "^0.27.8"
pinecone-client = "^2.2.2"
sqlalchemy = "<1.5"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
azure-cognitiveservices-speech = "^1.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
